# otus-cpp-homework-01

./: .travis.yml  CMakeLists.txt  bintray-descriptor.sh  descriptor.json
hello_world/: CMakeLists.txt
hello_world/src/: hello_world.cpp
version/: CMakeLists.txt
version/include/: version.h
version/src/: config.h.in  version.cpp
version/test/: version_test.cpp
